--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -4,7 +4,7 @@
   <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SourTools Settings</title>
+	<title>SimpleR Settings</title>
 	<link rel="shortcut icon" type="image/png" href="/img/icons/16.png">
 	<link rel="stylesheet" type="text/css" href="/styles/sourbar.css">
 	<style>
@@ -90,7 +90,7 @@
 	<h3>Load settings from file</h3>
 	<a id="json-load" class="button-small tiny">Browse</a>
 		<input style="display: none;" type="file" id="json-load-picker" accept="text/plain"><br>
-		<p>NOTE: Make sure the file is a json file exported from SourTools!</p>
+		<p>NOTE: Make sure the file is a json file exported from SimpleR!</p>
 	</div>
 
 	<div id="settings-root">
